--- a/RationShop/WebApp/templates/LoginPage.html
+++ b/RationShop/WebApp/templates/LoginPage.html
@@ -21,7 +21,7 @@
 							{% csrf_token %}
 							<div class="input-group">
 							<i class='bx bxs-user'></i>
-							<input type="text" placeholder="Username" name="uname">
+							<input type="text" placeholder="Ration Card Number or Register Number" name="uname">
 						</div>
 							<div class="input-group">
 								<i class='bx bxs-lock-alt'></i>
