--- a/RationShop/WebApp/templates/ShopSignUp.html
+++ b/RationShop/WebApp/templates/ShopSignUp.html
@@ -114,10 +114,11 @@
             <p class="text-muted mb-4">Complete signup with all details</p>
         </div>
         
-        <form  id="signup-form" class="form">
+        <form  id="signup-form" class="form" action="{% url 'SaveShop' %}" method="post">
+            {% csrf_token %}
             <div class="mb-3">
                 <div class="input-group">
-                    <input type="text" name="bname" class="form-control input-with-icon" id="fullName" placeholder="Enter Your Name">
+                    <input type="text" name="sname" class="form-control input-with-icon"  placeholder="Enter Your Name">
                     <div class="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                             <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
@@ -128,7 +129,7 @@
 
             <div class="mb-3">
                 <div class="input-group">
-                    <input type="text" name="ratoncard" class="form-control input-with-icon" id="fullName" placeholder="Shop Register Number">
+                    <input type="text" name="regnumber" class="form-control input-with-icon" placeholder="Shop Register Number">
                     <div class="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                             <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
@@ -139,7 +140,7 @@
             
             <div class="mb-3">
                 <div class="input-group">
-                    <input type="text" name="bmobile" class="form-control input-with-icon" id="fullName" placeholder="Mobile Number">
+                    <input type="text" name="smobile" class="form-control input-with-icon" id="fullName" placeholder="Mobile Number">
                     <div class="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                             <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
@@ -150,7 +151,7 @@
             
             <div class="mb-3">
                 <div class="input-group">
-                    <input type="email" name="bmail" class="form-control input-with-icon" id="email" placeholder="Enter Your Email">
+                    <input type="email" name="smail" class="form-control input-with-icon" id="email" placeholder="Enter Your Email">
                     <div class="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
                             <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
@@ -161,7 +162,7 @@
             
             <div class="mb-4">
                 <div class="input-group">
-                    <input type="password" name="bpass" class="form-control input-with-icon" id="password" placeholder="Enter Password">
+                    <input type="password" name="spass" class="form-control input-with-icon" id="password" placeholder="Enter Password">
                     <div class="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock" viewBox="0 0 16 16">
                             <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2zM5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1z"/>
