--- a/RationShop/WebApp/templates/Products.html
+++ b/RationShop/WebApp/templates/Products.html
@@ -92,8 +92,8 @@
                                         <i class="bi bi-person-circle" style="font-size: 2rem;"></i>
                                     </a>
                                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                                        {% if request.session.U_Name %}
-                                        <h2 style="text-align:center;">Hi,{{request.session.U_Name}}</h2>
+                                        {% if request.session.Ration_Card %}
+                                        <h2 style="text-align:center;">Hi,{{request.session.Ration_Card}}</h2>
 
                                         <hr style="border: 2px solid black; margin: 20px 0;">
                                         <button class="dropdown-item">
