--- a/RationShop/WebApp/templates/AboutUs.html
+++ b/RationShop/WebApp/templates/AboutUs.html
@@ -86,14 +86,32 @@
                                         <i class="bi bi-person-circle" style="font-size: 2rem;"></i>
                                     </a>
                                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                                        {% if request.session.U_Name %}
-                                        <h2 style="text-align:center;">Hi,{{request.session.U_Name}}</h2>
+                                        {% if request.session.Ration_Card %}
+                                        <h2 style="text-align:center;">Hi, {{ request.session.Ration_Card }}</h2>
                                         <hr style="border: 2px solid black; margin: 20px 0;">
+                                        {% if details and details.id %}
                                         <button class="dropdown-item">
                                             <a href="{% url 'MyDetails' details.id %}">My Details</a>
                                         </button>
+                                        {% else %}
+                                        <p style="text-align: center;">Details not available</p>
+                                        {% endif %}
                                         <hr style="border: 2px solid black; margin: 20px 0;">
                                         <a class="dropdown-item" href="{% url 'LogOut' %}">Logout</a>
+
+                                        {% elif request.session.Reg_Num %}
+                                        <h2 style="text-align:center;">Hi, {{ request.session.Reg_Num }}</h2>
+                                        <hr style="border: 2px solid black; margin: 20px 0;">
+                                        {% if shp and shp.id %}
+                                        <button class="dropdown-item">
+                                            <a href="{% url 'MyDetails' shp.id %}">My Details</a>
+                                        </button>
+                                        {% else %}
+                                        <p style="text-align: center;">Details not available</p>
+                                        {% endif %}
+                                        <hr style="border: 2px solid black; margin: 20px 0;">
+                                        <a class="dropdown-item" href="{% url 'LogOut' %}">Logout</a>
+
                                         {% else %}
                                         <a class="dropdown-item" href="{% url 'LoginPage' %}">Login</a>
                                         {% endif %}
@@ -115,7 +133,8 @@
         <div class="row d_flex">
             <div class="col-md-7">
                 <div class="about_img">
-                    <figure><img src="{% static 'web/assets/images/Rationlogo.png' %}" style="width:650px;height:400px;border-radius:20px;" alt="#"></figure>
+                    <figure><img src="{% static 'web/assets/images/Rationlogo.png' %}"
+                                 style="width:650px;height:400px;border-radius:20px;" alt="#"></figure>
                 </div>
             </div>
             <div class="col-md-5">
@@ -167,7 +186,8 @@
                 <div class="col-6 col-lg-2 mb-3">
                     <h4 style="color:white;" class="border-bottom mb-4">For Admins</h4>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a style="color:white;" href="{% url 'AdminLoginPage' %}">Go To Admin DashBoard</a></li>
+                        <li class="mb-2"><a style="color:white;" href="{% url 'AdminLoginPage' %}">Go To Admin
+                            DashBoard</a></li>
                         <li class="mb-2"><a href="/docs/5.3/examples/starter-template/">Starter template</a>
                         </li>
                         <li class="mb-2"><a href="/docs/5.3/getting-started/webpack/">Webpack</a></li>
