--- a/RationShop/WebApp/templates/CartPage.html
+++ b/RationShop/WebApp/templates/CartPage.html
@@ -64,8 +64,13 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                             <ul class="navbar-nav mr-auto">
+
                                 <li class="nav-item">
+                                    {% if request.session.Ration_Card %}
                                     <a class="nav-link" href="{% url 'Home' %}"> Home </a>
+                                    {% elif request.session.Reg_Num %}
+                                    <a class="nav-link" href="{% url 'ShopHome' %}"> Home </a>
+                                    {% endif %}
                                 </li>
                                 <li class="nav-item ">
                                     <a class="nav-link" href="{% url 'Products' %}">Ration</a>
@@ -90,14 +95,32 @@
                                         <i class="bi bi-person-circle" style="font-size: 2rem;"></i>
                                     </a>
                                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                                        {% if request.session.U_Name %}
-                                        <h2 style="text-align:center;">Hi,{{request.session.U_Name}}</h2>
+                                        {% if request.session.Ration_Card %}
+                                        <h2 style="text-align:center;">Hi, {{ request.session.Ration_Card }}</h2>
                                         <hr style="border: 2px solid black; margin: 20px 0;">
+                                        {% if details and details.id %}
                                         <button class="dropdown-item">
-                                            <a href="{% url 'MyDetails'  details.id %}">My Details</a>
+                                            <a href="{% url 'MyDetails' details.id %}">My Details</a>
                                         </button>
+                                        {% else %}
+                                        <p style="text-align: center;">Details not available</p>
+                                        {% endif %}
                                         <hr style="border: 2px solid black; margin: 20px 0;">
                                         <a class="dropdown-item" href="{% url 'LogOut' %}">Logout</a>
+
+                                        {% elif request.session.Reg_Num %}
+                                        <h2 style="text-align:center;">Hi, {{ request.session.Reg_Num }}</h2>
+                                        <hr style="border: 2px solid black; margin: 20px 0;">
+                                        {% if shp and shp.id %}
+                                        <button class="dropdown-item">
+                                            <a href="{% url 'MyDetails' shp.id %}">My Details</a>
+                                        </button>
+                                        {% else %}
+                                        <p style="text-align: center;">Details not available</p>
+                                        {% endif %}
+                                        <hr style="border: 2px solid black; margin: 20px 0;">
+                                        <a class="dropdown-item" href="{% url 'LogOut' %}">Logout</a>
+
                                         {% else %}
                                         <a class="dropdown-item" href="{% url 'LoginPage' %}">Login</a>
                                         {% endif %}
@@ -185,7 +208,7 @@
                         <strong>₹425.25</strong>
                     </div>
                     <button class="btn btn-dark w-100">
-                        <i class="fas fa-lock me-2"></i>Proceed to Checkout
+                        <i class="fas fa-lock me-2"></i><a href="{% url 'CheckOut' %}">Proceed to Checkout</a>
                     </button>
                     <small class="text-muted d-block text-center mt-3">
                         Delivery schedule will be confirmed after checkout
